-Added an event for the Timurid Invasion
-Added 'reward' modifiers for Nestorian incidents
-Added many new Tuscan DPNs (thanks to Bussygal)
-Increased sailing speed of all ships by 1.5
-Austrian flavor events will no longer convert Carpathia recklessly to Hungarian
-Nerfed the historical center of Prague monument
-Byzantine provinces can no longer defect to the Seljuks before or during the Crisis of the 11th Century
-Other minor localization/bug fixes

# v 2.2.6 #

-Added the following monuments: Torre del Oro, Santiago Cathedral, Wartburg, Mont Saint Michel Abbey, Edinburgh Castle, Siwa Oasis, Visby Ringmur, Lighthouse of Alexandria, Chouara Tannery of Fes, Old City of Pfullendorf, Three Towers of San Marino
-Added 2 more loading tips
-Fixed government reform progress of natives
-Optimised some bits of code to be less laggy (thanks to Advocatus Diaboli)
-Ships should be able blockade forts again (thanks to Zemurin)
-Nestorian incidents will now lead to the right state of Communion
-England will no longer lose its national ideas if formed by Normandy
-Natives will be able to embrace techs again
-It is no longer possible for Turkish monarchies to change primary culture
-Colonies should no longer remain without religion or culture
-monument_events.1 should now trigger as intended
-Jewish nations have now access to Muslim School privileges
-Other minor localization/bug fixes

# v 2.2.5 #

-Updated the mod to EU4 version 1.32
-Added new mission tree for Taifa with 21 missions (contribution by RetrogMGXII)
-Added the following new mercenary companies: Berber Auxiliaries
-Added the following monuments: House of Wisdom, Palais des Papes in Avignon, Binnenhof in Den Haag (contributed by Fresian), Abbey of Cluny, St. Pierre Cathedral in Geneva (contrbuted by RetrogMGXII)
-Added 6 new papal bulls for the Catholique papacy