@@ -4456,8 +4456,7 @@ THU_ideas = {
 	free = yes
 	
 	thu_partition_of_leipizg = {
-		legitimacy = 1
-		republican_tradition = 0.3
+		cavalry_power = 0.1
 	}
 	thu_erfurt_fortifications = {
 		defensiveness = 0.2
@@ -4469,10 +4468,10 @@ THU_ideas = {
 		adm_tech_cost_modifier = -0.1
 	}
 	thu_saxon_duchies = {
-		heir_chance = 0.5
+		discipline = 0.05
 	}
 	thu_weimar_clacissicism = {
-		idea_cost = -0.1
+		global_institution_spread = 0.1
 	}
 	thu_expansive_marriage_policies = {
 		diplomatic_upkeep = 1
