@@ -33,7 +33,7 @@ fixed_capital = 2511
 1066.6.1 = {
 	monarch = {
 		name = "Udo"
-		dynasty = "von Nellenburg"
+		dynasty = "Eberharding"
 		birth_date = 1035.1.1
 		culture = boden_alemannic
 		adm = 2
