@@ -140,6 +140,12 @@
  kammergericht_desc: "In order to regularize control of the Margraviate of Brandenburg the early rulers would replace local common law with Roman law. They would further regulate justice by moving the Supreme Court from the court of the Elector (who was prone to moving around) to fixed and central location. This simultaneously improved justice and curbed the power of local magnates."
  imperial_ambitions_desc: "The fall of the Carolingians led to chaos in the Empire and Salic administration has legalized anarchy by calling a constitution. However the Imperial title deserves to be held by our most noble house from its power base in Austria. We must achieve this title and then seek to reform the Empire to make it Holy, Roman, and an Empire once more."
  habsburg_dominance: "Diplomatic Dominance"
+ thu_partition_of_leipizg: "Cavalry Heritage"
+ thu_partition_of_leipizg_desc: "The first ever written accounts of the Thuringians come from Flavius Vegetius Renatus, a Roman military theorist, comparing the Thuringians to the Burgundians and the Huns. The later were feared cavalry man and so it is only plausible that the 'Toringi', our ancestors, were skilled cavalryman aswell."
+ thu_saxon_duchies: "Legacy of Battlegrounds"
+ thu_saxon_duchies_desc: "Our central position in the Holy Roman and Germany did not only make us a center of science and culture but has also painted our fields red. In almost every major war, battles took place on Thuringian soil. From the Thirty Years' War to the Schmalkaldic War and even the Twin Battles of Jena and Auerstadt, our country has watched the bloodshed. We sat and we learned."
+ thu_weimar_clacissicism: "Beacon of Innovation"
+ thu_weimar_clacissicism_desc: "For centuries, Thuringia has been the heartland of intellect and culture: From the Wartburg being a harbour of minstrelsy and birthplace of a unified German language to Weimar hosting the greatest minds of literature. And as Joseph Widmann once said: 'How likely is it that a small little country brought forth three different major intellectual genius?'"
  additional_colonists: "Claim Forgery"
  additional_colonists_desc: "The first step in fabricating claims is forging historical documents, ancient affidavits promising some land or other. By understanding philological disciplines, we can create more convincing frauds which even the most skeptical scholars will believe."
  quest_for_the_new_world_desc: "The new world is many things, most important of all, empty. Well no one important lives there at any rate. By letting people know of the boundless opportunities we have in the new world we will encourage more people to go forth and settle there."
