@@ -182,6 +182,12 @@
  kammergericht_desc: "Um die Herrschaft in der Markgrafschaft Brandenburg gesetzlich zu regeln, ersetzten die frühen Herrscher das lokale Recht durch römisches Recht. Außerdem wurde der Sitz der obersten Instanz der Justiz, der sich bislang am Hofe des Kurfürsten befunden hatte, an einen festen Ort verlegt (der Kurfürst war des Öfteren unterwegs). So konnte zum einen die Justiz verbessert und zum anderen die Macht der lokalen Magnaten beschnitten werden."
  imperial_ambitions_desc: "Der Untergang der Karolinger führte zu chaotischen Zuständen im Reich und die salische Führung ordnete die Anarchie durch eine Verfassung. Doch der kaiserliche Titel verdient es, von unserem edelsten Haus aus seiner Machtbasis in Österreich gehalten zu werden. Wir müssen diesen Titel behalten und dafür sorgen, dass aus diesem Reich wieder ein Heiliges Römisches wird."
  habsburg_dominance: "Diplomatische Dominanz"
+ thu_partition_of_leipizg: "Erbe der Kavallerie"
+ thu_partition_of_leipizg_desc: "Der erste schriftliche Bericht über die Thüringer stammt von Flavius Vegetius Renatus, einem römischen Militärtheoretiker, der die Thüringer mit den Burgundern und den Hunnen vergleicht. Letztere waren gefürchtete Kavalleristen, weshalb es nur plausibel ist, dass die "Toringi", unsere Vorfahren, ebenfalls erfahrene Kavalleristen gewesen sein müssen."
+ thu_saxon_duchies: "Vermächtnis der Schlachtfelder"
+ thu_saxon_duchies_desc: "Unsere zentrale Lage im Heiligen Römischen Reich und in Deutschland hat uns nicht nur zu einem Zentrum von Wissenschaft und Kultur gemacht, sondern auch unsere Felder rot gefärbt. In fast allen großen Kriegen fanden Schlachten auf thüringischem Boden statt. Vom Dreißigjährigen Krieg über den Schmalkaldischen Krieg bis hin zu der Doppelschlacht von Jena und Auerstadt hat unser Land das Blutvergießen miterlebt. Wir haben zugesehen und gelernt."
+ thu_weimar_clacissicism: "Leuchtturm der Innovation"
+ thu_weimar_clacissicism_desc: "Thüringen ist seit Jahrhunderten das Herzstück von Geist und Kultur: Von der Wartburg als Hafen der Minnesänger und Geburtsort einer einheitlichen deutschen Sprache bis hin zu Weimar als Sitz der größten Köpfe der Literatur. Und wie Joseph Widmann einmal sagte: "Wie wahrscheinlich ist es, dass ein kleines Land drei verschiedene große Denker hervorbringt?""
  additional_colonists: "Anspruchsfälschung"
  additional_colonists_desc: "Der erste Schritt bei der Erstellung von Ansprüchen ist die Fälschung historischer Dokumente, alte eidesstattliche Erklärungen, die irgendeinem Land versprechen. Wenn wir die sprachwissenschaftlichen Disziplinen verstehen, können wir überzeugendere Betrügereien schaffen, die selbst die skeptischsten Experten glauben werden."
  quest_for_the_new_world_desc: "Die neue Welt ist vieles, vor allem aber leer. Jedenfalls lebt dort niemand von Bedeutung. Indem wir die Menschen über die grenzenlosen Möglichkeiten, die wir in der neuen Welt haben, informieren, werden wir mehr Menschen ermutigen, sich dort niederzulassen."
