@@ -10,6 +10,7 @@
 -Added many new Tuscan DPNs (thanks to Bussygal)
 -Increased sailing speed of all ships by 1.5
 -Austrian flavor events will no longer convert Carpathia recklessly to Hungarian
+-Slightly changed Thuringian NIs by removing Saxon references from it 
 -Nerfed the historical center of Prague monument
 -Byzantine provinces can no longer defect to the Seljuks before or during the Crisis of the 11th Century
 -Other minor localization/bug fixes
